Fix size and position mobile

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a {
     border-radius: 6px;
     font-size: 18px;
     margin-top: 52px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
 }
 a:hover {
     background-color: #060526;
@@ -85,8 +85,9 @@ a:hover {
 }
 
 #logo {
+    position: fixed;
     width: 200px;
-    height: 50px;
+    min-height: 50px;
     margin-top: 60px;
     background-image: url('./nocturne.png');
     background-size: contain;
